--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
-version: 2
+version: 2.1
+executors:
+    docker-publisher:
+      working_directory: ~/cci-film-ratings # directory where steps will run
+      environment:
+        IMAGE_NAME: chrishowejones/film-ratings-app
+      docker:
+        - image: circleci/buildpack-deps:stretch
 jobs:
   build:
     working_directory: ~/cci-film-ratings # directory where steps will run
@@ -17,3 +24,113 @@ jobs:
             - ~/.m2
           key: film-ratings-{{ checksum "project.clj" }}
       - run: lein do test, uberjar
+      - persist_to_workspace:
+          root: ~/cci-film-ratings
+          paths:
+            - target
+  build-docker:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - setup_remote_docker
+      - run:
+          name: Build latest Docker image
+          command: docker build . -t $IMAGE_NAME:latest
+      - run:
+          name: Build tagged Docker image
+          command: docker build . -t $IMAGE_NAME:${CIRCLE_TAG}
+      - run:
+          name: Archive Docker images
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: ~/cci-film-ratings
+          paths:
+            - ./image.tar
+  publish-docker:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: .
+      - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "${DOCKERHUB_PASS}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
+            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:${CIRCLE_TAG}
+  deploy:
+    docker:
+      - image: circleci/python:3.6.1
+    environment:
+      AWS_DEFAULT_OUTPUT: json
+      IMAGE_NAME: chrishowejones/film-ratings-app
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-{{ checksum "requirements.txt" }}
+      - run:
+          name: Install the AWS CLI
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: v1-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+      - run:
+          name: Deploy
+          command: |
+            . venv/bin/activate
+            ./deploy.sh
+workflows:
+  version: 2.1
+  main:
+    jobs:
+      - build
+  build_and_deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+      - build-docker:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+      - publish-docker:
+          requires:
+            - build-docker
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+      - hold:
+          requires:
+            - publish-docker
+          type: approval
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+      - deploy:
+          requires:
+            - hold
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
